chore: toList() 스트림 메서드 변경